--- a/assets/css/todos.css
+++ b/assets/css/todos.css
@@ -1,3 +1,11 @@
+body {
+  font-family: Roboto;
+  background: #136a8a; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #136a8a , #267871); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #136a8a , #267871); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
+
 h1 {
   text-transform: uppercase;
   background: #2980b9;
@@ -9,14 +17,22 @@ h1 {
 }
 
 input[type="text"] {
-  width: 360px;
+  width: 100%;
   margin: 0;
   padding: 0;
-  background: none;
+  background: #F7F7F7;
   border: none;
   outline: none;
-  font-size: 20px;
-  padding: 10px 20px;
+  font-size: 18px;
+  padding: 13px 13px 13px 20px;
+  box-sizing: border-box;
+  color: #2980b9;
+  border: 3px solid rgba(0, 0, 0, 0);
+}
+
+input[type="text"]:focus {
+  background: white;
+  border: 3px solid #2980b9;
 }
 
 ul {
@@ -26,12 +42,33 @@ ul {
 }
 
 li {
-  padding: 5px 20px;
+  height: 40px;
+  line-height: 40px;
   font-weight: 400;
+  color: #666;
+}
+
+span {
+  background: #e74c3c;
+  height: 40px;
+  margin-right: 20px;
+  text-align: center;
+  color: white;
+  width: 0;
+  display: inline-block;
+  transition: 0.2s linear;
+  -webkit-transition: 0.2s linear;
+  -moz-transition: 0.2s linear;
+  opacity: 0;
 }
 
 li:nth-child(odd) {
   background: white;
+}
+
+li:hover span {
+  width: 40px;
+  opacity: 1.0;
 }
 
 .done {
@@ -46,6 +83,6 @@ li:nth-child(odd) {
   background: #F7F7F7;
 }
 
-body {
-  font-family: Roboto;
+.fa-plus {
+  float: right;
 }
