--- a/assets/css/todos.css
+++ b/assets/css/todos.css
@@ -1,5 +1,35 @@
+html, body {
+  margin: 0;
+  padding: 0;
+}
+
+#navbar li #logo {
+  width: 90px;
+  text-align: left;
+}
+
 html {
   height: 100%;
+}
+
+#navbar ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #2980b9;
+}
+
+#navbar li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+#navbar li a:hover {
+    background-color: rgba(4, 124, 249, .5);
 }
 
 body {
@@ -39,13 +69,13 @@ input[type="text"]:focus {
   border: 3px solid #2980b9;
 }
 
-ul {
+  ul {
   list-style: none;
   margin: 0;
   padding: 0;
 }
 
-li {
+#container li {
   height: 40px;
   line-height: 40px;
   font-weight: 400;
@@ -66,11 +96,11 @@ span {
   opacity: 0;
 }
 
-li:nth-child(odd) {
+#container li:nth-child(odd) {
   background: white;
 }
 
-li:hover span {
+#container li:hover span {
   width: 40px;
   opacity: 1.0;
 }
